hotfix(images): correct the error with images path after vite build not best practice but waiting for better correction

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="shortcut icon" type="image/png" href="img/dove-solid.svg" />
+		<link rel="shortcut icon" type="image/png" href="assets/dove-solid.svg" />
 
 		<script type="module" src="/main.ts"></script>
 
@@ -25,7 +25,7 @@
 			<section class="section-slider">
 				<div class="slideshow">
 					<img
-						src="./img/Accueil_3.webp"
+						src="./assets/Accueil_3.webp"
 						alt="Photo d'ensemble des gîtes"
 						class="slideshow__image"
 					/>
@@ -38,7 +38,7 @@
 				</div>
 			</section>
 			<div class="separator">
-				<img src="./img/separateur-1.png" alt="séparateur" />
+				<img src="./assets/separateur-1.png" alt="séparateur" />
 			</div>
 
 			<section class="section-accommodations">
@@ -47,12 +47,12 @@
 				<div class="accommodation accommodation--1">
 					<figure class="accommodation__images">
 						<img
-							src="/img/pinson_7.webp"
+							src="/assets/pinson_7.webp"
 							alt="Gite les pinsons"
 							class="accommodation__images--1"
 						/>
 						<img
-							src="/img/pinson_1.webp"
+							src="/assets/pinson_1.webp"
 							alt="Gite les pinsons"
 							class="accommodation__images--2 accommodation__images--2--right"
 						/>
@@ -76,12 +76,12 @@
 				<div class="accommodation accommodation--2">
 					<figure class="accommodation__images">
 						<img
-							src="/img/Mesanges_02.webp"
+							src="/assets/Mesanges_02.webp"
 							alt="Gite les pinsons"
 							class="accommodation__images--1"
 						/>
 						<img
-							src="/img/pinson_1.webp"
+							src="/assets/pinson_1.webp"
 							alt="Gite les mésange"
 							class="accommodation__images--2 accommodation__images--2--left"
 						/>
@@ -106,7 +106,7 @@
 					<div class="area_presentation__content">
 						<h2 class="heading-primary">Présentation du domaine</h2>
 						<img
-							src="/img/Mesange_oiseau_2.webp"
+							src="/assets/Mesange_oiseau_2.webp"
 							alt="une mésange"
 							class="area_presentation__image"
 						/>
@@ -133,7 +133,7 @@
 				<div class="services-list">
 					<div class="service">
 						<img
-							src="/img/icons/pool.svg"
+							src="/assets/icons/pool.svg"
 							alt="piscine exterieur"
 							class="service__icon"
 						/>
@@ -145,7 +145,7 @@
 					</div>
 					<div class="service">
 						<img
-							src="/img/icons/terrace.svg"
+							src="/assets/icons/terrace.svg"
 							alt="terrasse privative"
 							class="service__icon"
 						/>
@@ -156,7 +156,7 @@
 						</p>
 					</div>
 					<div class="service">
-						<img src="/img/icons/clim.svg" alt="climatisation" class="service__icon" />
+						<img src="/assets/icons/clim.svg" alt="climatisation" class="service__icon" />
 						<h3 class="heading-secondary">climatisation</h3>
 						<p class="service__text">
 							Pour que les mélodie n’ai pas froid l’hiver, l’été le printemps l’autumn
@@ -164,7 +164,7 @@
 						</p>
 					</div>
 					<div class="service">
-						<img src="/img/icons/wifi.svg" alt="wi-fi" class="service__icon" />
+						<img src="/assets/icons/wifi.svg" alt="wi-fi" class="service__icon" />
 						<h3 class="heading-secondary">wi-fi</h3>
 						<p class="service__text">
 							Wifi avec débit de fibre optique mais potentielement un VPN ça dépend du
@@ -173,7 +173,7 @@
 					</div>
 					<div class="service">
 						<img
-							src="/img/icons/map.svg"
+							src="/assets/icons/map.svg"
 							alt="conseils et suggestions"
 							class="service__icon"
 						/>
@@ -184,7 +184,7 @@
 						</p>
 					</div>
 					<div class="service">
-						<img src="/img/icons/moto.svg" alt="moto" class="service__icon" />
+						<img src="/assets/icons/moto.svg" alt="moto" class="service__icon" />
 						<h3 class="heading-secondary">garage moto</h3>
 						<p class="service__text">
 							Garage moto pour les motards qui n’ont pas de harley davinson (c’est
@@ -196,46 +196,46 @@
 
 			<section class="gallery">
 				<figure class="gallery__item gallery__item--1">
-					<img src="img/piscine_1.webp" alt="Gallery 1" class="gallery__img" />
+					<img src="assets/piscine_1.webp" alt="Gallery 1" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--2">
-					<img src="img/Accueil_1.webp" alt="Gallery 13" class="gallery__img" />
+					<img src="assets/Accueil_1.webp" alt="Gallery 13" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--3">
-					<img src="img/ext_6.webp" alt="Gallery 3" class="gallery__img" />
+					<img src="assets/ext_6.webp" alt="Gallery 3" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--4">
-					<img src="img/repas_1.webp" alt="Gallery 4" class="gallery__img" />
+					<img src="assets/repas_1.webp" alt="Gallery 4" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--5">
-					<img src="img/ext_4.webp" alt="Gallery 5" class="gallery__img" />
+					<img src="assets/ext_4.webp" alt="Gallery 5" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--6">
-					<img src="img/piscine_2.webp" alt="Gallery 6" class="gallery__img" />
+					<img src="assets/piscine_2.webp" alt="Gallery 6" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--7">
-					<img src="img/ext_2.webp" alt="Gallery 7" class="gallery__img" />
+					<img src="assets/ext_2.webp" alt="Gallery 7" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--8">
-					<img src="img/gite1.webp" alt="Gallery 8" class="gallery__img" />
+					<img src="assets/gite1.webp" alt="Gallery 8" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--9">
-					<img src="img/ext_1.webp" alt="Gallery 9" class="gallery__img" />
+					<img src="assets/ext_1.webp" alt="Gallery 9" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--10">
-					<img src="img/pinson_4.webp" alt="Gallery 10" class="gallery__img" />
+					<img src="assets/pinson_4.webp" alt="Gallery 10" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--11">
-					<img src="img/picSaintLoup.jpg" alt="Gallery 11" class="gallery__img" />
+					<img src="assets/picSaintLoup.jpg" alt="Gallery 11" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--12">
-					<img src="img/entrée_domaine_1.webp" alt="Gallery 12" class="gallery__img" />
+					<img src="assets/entrée_domaine_1.webp" alt="Gallery 12" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--13">
-					<img src="img/ext_5.webp" alt="Gallery 2" class="gallery__img" />
+					<img src="assets/ext_5.webp" alt="Gallery 2" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--14">
-					<img src="img/piscine_3.webp" alt="Gallery 14" class="gallery__img" />
+					<img src="assets/piscine_3.webp" alt="Gallery 14" class="gallery__img" />
 				</figure>
 			</section>
 		</main>
