--- a/pages/pinson.html
+++ b/pages/pinson.html
@@ -17,7 +17,7 @@
 			rel="stylesheet"
 		/>
 
-		<link rel="shortcut icon" type="image/png" href="img/dove-solid.svg" />
+		<link rel="shortcut icon" type="image/png" href="assets/dove-solid.svg" />
 
 		<script type="module" src="../main.ts"></script>
 
