refactor(footer): use shadow dom for Footer webComponent and import scss style

--- a/index.html
+++ b/index.html
@@ -156,7 +156,11 @@
 						</p>
 					</div>
 					<div class="service">
-						<img src="/assets/icons/clim.svg" alt="climatisation" class="service__icon" />
+						<img
+							src="/assets/icons/clim.svg"
+							alt="climatisation"
+							class="service__icon"
+						/>
 						<h3 class="heading-secondary">climatisation</h3>
 						<p class="service__text">
 							Pour que les mélodie n’ai pas froid l’hiver, l’été le printemps l’autumn
