Revert "feat(images): implement lazy loading for images using IntersectionObserver"
This reverts commit 577a32faaca33a4a38f4159674086e1d4cd7170d.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<section class="section-slider">
 				<div class="slideshow">
 					<img
-						data-src="./assets/Accueil_3.webp"
+						src="./assets/Accueil_3.webp"
 						alt="Photo d'ensemble des gîtes"
 						class="slideshow__image"
 					/>
@@ -38,7 +38,7 @@
 				</div>
 			</section>
 			<div class="separator">
-				<img data-src="./assets/separateur-1.png" alt="séparateur" />
+				<img src="./assets/separateur-1.png" alt="séparateur" />
 			</div>
 
 			<section class="section-accommodations">
@@ -47,12 +47,12 @@
 				<div class="accommodation accommodation--1">
 					<figure class="accommodation__images">
 						<img
-							data-src="/assets/pinson_7.webp"
+							src="/assets/pinson_7.webp"
 							alt="Gite les pinsons"
 							class="accommodation__images--1"
 						/>
 						<img
-							data-src="/assets/pinson_1.webp"
+							src="/assets/pinson_1.webp"
 							alt="Gite les pinsons"
 							class="accommodation__images--2 accommodation__images--2--right"
 						/>
@@ -76,12 +76,12 @@
 				<div class="accommodation accommodation--2">
 					<figure class="accommodation__images">
 						<img
-							data-src="/assets/Mesanges_02.webp"
+							src="/assets/Mesanges_02.webp"
 							alt="Gite les pinsons"
 							class="accommodation__images--1"
 						/>
 						<img
-							data-src="/assets/pinson_1.webp"
+							src="/assets/pinson_1.webp"
 							alt="Gite les mésange"
 							class="accommodation__images--2 accommodation__images--2--left"
 						/>
@@ -106,7 +106,7 @@
 					<div class="area_presentation__content">
 						<h2 class="heading-primary">Présentation du domaine</h2>
 						<img
-							data-src="/assets/Mesange_oiseau_2.webp"
+							src="/assets/Mesange_oiseau_2.webp"
 							alt="une mésange"
 							class="area_presentation__image"
 						/>
@@ -133,7 +133,7 @@
 				<div class="services-list">
 					<div class="service">
 						<img
-							data-src="/assets/icons/pool.svg"
+							src="/assets/icons/pool.svg"
 							alt="piscine exterieur"
 							class="service__icon"
 						/>
@@ -145,7 +145,7 @@
 					</div>
 					<div class="service">
 						<img
-							data-src="/assets/icons/terrace.svg"
+							src="/assets/icons/terrace.svg"
 							alt="terrasse privative"
 							class="service__icon"
 						/>
@@ -157,7 +157,7 @@
 					</div>
 					<div class="service">
 						<img
-							data-src="/assets/icons/clim.svg"
+							src="/assets/icons/clim.svg"
 							alt="climatisation"
 							class="service__icon"
 						/>
@@ -168,7 +168,7 @@
 						</p>
 					</div>
 					<div class="service">
-						<img data-src="/assets/icons/wifi.svg" alt="wi-fi" class="service__icon" />
+						<img src="/assets/icons/wifi.svg" alt="wi-fi" class="service__icon" />
 						<h3 class="heading-secondary">wi-fi</h3>
 						<p class="service__text">
 							Wifi avec débit de fibre optique mais potentielement un VPN ça dépend du
@@ -177,7 +177,7 @@
 					</div>
 					<div class="service">
 						<img
-							data-src="/assets/icons/map.svg"
+							src="/assets/icons/map.svg"
 							alt="conseils et suggestions"
 							class="service__icon"
 						/>
@@ -188,7 +188,7 @@
 						</p>
 					</div>
 					<div class="service">
-						<img data-src="/assets/icons/moto.svg" alt="moto" class="service__icon" />
+						<img src="/assets/icons/moto.svg" alt="moto" class="service__icon" />
 						<h3 class="heading-secondary">garage moto</h3>
 						<p class="service__text">
 							Garage moto pour les motards qui n’ont pas de harley davinson (c’est
@@ -200,46 +200,46 @@
 
 			<section class="gallery">
 				<figure class="gallery__item gallery__item--1">
-					<img data-src="assets/piscine_1.webp" alt="Gallery 1" class="gallery__img" />
+					<img src="assets/piscine_1.webp" alt="Gallery 1" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--2">
-					<img data-src="assets/Accueil_1.webp" alt="Gallery 13" class="gallery__img" />
+					<img src="assets/Accueil_1.webp" alt="Gallery 13" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--3">
-					<img data-src="assets/ext_6.webp" alt="Gallery 3" class="gallery__img" />
+					<img src="assets/ext_6.webp" alt="Gallery 3" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--4">
-					<img data-src="assets/repas_1.webp" alt="Gallery 4" class="gallery__img" />
+					<img src="assets/repas_1.webp" alt="Gallery 4" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--5">
-					<img data-src="assets/ext_4.webp" alt="Gallery 5" class="gallery__img" />
+					<img src="assets/ext_4.webp" alt="Gallery 5" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--6">
-					<img data-src="assets/piscine_2.webp" alt="Gallery 6" class="gallery__img" />
+					<img src="assets/piscine_2.webp" alt="Gallery 6" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--7">
-					<img data-src="assets/ext_2.webp" alt="Gallery 7" class="gallery__img" />
+					<img src="assets/ext_2.webp" alt="Gallery 7" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--8">
-					<img data-src="assets/gite1.webp" alt="Gallery 8" class="gallery__img" />
+					<img src="assets/gite1.webp" alt="Gallery 8" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--9">
-					<img data-src="assets/ext_1.webp" alt="Gallery 9" class="gallery__img" />
+					<img src="assets/ext_1.webp" alt="Gallery 9" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--10">
-					<img data-src="assets/pinson_4.webp" alt="Gallery 10" class="gallery__img" />
+					<img src="assets/pinson_4.webp" alt="Gallery 10" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--11">
-					<img data-src="assets/picSaintLoup.jpg" alt="Gallery 11" class="gallery__img" />
+					<img src="assets/picSaintLoup.jpg" alt="Gallery 11" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--12">
-					<img data-src="assets/entrée_domaine_1.webp" alt="Gallery 12" class="gallery__img" />
+					<img src="assets/entrée_domaine_1.webp" alt="Gallery 12" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--13">
-					<img data-src="assets/ext_5.webp" alt="Gallery 2" class="gallery__img" />
+					<img src="assets/ext_5.webp" alt="Gallery 2" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--14">
-					<img data-src="assets/piscine_3.webp" alt="Gallery 14" class="gallery__img" />
+					<img src="assets/piscine_3.webp" alt="Gallery 14" class="gallery__img" />
 				</figure>
 			</section>
 		</main>
