--- a/index.html
+++ b/index.html
@@ -4,15 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<link
-			href="https://fonts.googleapis.com/css?family=Poppins:100,300,400,700,900"
-			rel="stylesheet"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="shortcut icon" type="image/png" href="assets/dove-solid.svg" />
+		<link href="https://fonts.googleapis.com/css?family=Poppins:100,300,400,700,900" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet" />
+		<link rel="shortcut icon" type="image/png" href="/img/dove-solid.svg" />
 
 		<script type="module" src="/main.ts"></script>
 
@@ -24,21 +18,15 @@
 		<main>
 			<section class="section-slider">
 				<div class="slideshow">
-					<img
-						src="./assets/Accueil_3.webp"
-						alt="Photo d'ensemble des gîtes"
-						class="slideshow__image"
-					/>
+					<img data-src="/img/Accueil_3.webp" alt="Photo d'ensemble des gîtes" class="slideshow__image" />
 					<div class="slideshow__title">
 						<h1 class="slideshow__title-main">Location de gîtes dans les Cévennes</h1>
-						<p class="slideshow__title-sub">
-							Réservez nos appartements de 1 à 2 personnes
-						</p>
+						<p class="slideshow__title-sub">Réservez nos appartements de 1 à 2 personnes</p>
 					</div>
 				</div>
 			</section>
 			<div class="separator">
-				<img src="./assets/separateur-1.png" alt="séparateur" />
+				<img data-src="/img/separateur-1.png" alt="séparateur" />
 			</div>
 
 			<section class="section-accommodations">
@@ -46,55 +34,31 @@
 
 				<div class="accommodation accommodation--1">
 					<figure class="accommodation__images">
-						<img
-							src="/assets/pinson_7.webp"
-							alt="Gite les pinsons"
-							class="accommodation__images--1"
-						/>
-						<img
-							src="/assets/pinson_1.webp"
-							alt="Gite les pinsons"
-							class="accommodation__images--2 accommodation__images--2--right"
-						/>
+						<img data-src="/img/pinson_7.webp" alt="Gite les pinsons" class="accommodation__images--1" />
+						<img data-src="/img/pinson_1.webp" alt="Gite les pinsons" class="accommodation__images--2 accommodation__images--2--right" />
 					</figure>
 					<div class="accommodation__details">
-						<h2 class="heading-secondary accommodation__details__heading--pinsons">
-							Nids des pinsons
-						</h2>
+						<h2 class="heading-secondary accommodation__details__heading--pinsons">Nids des pinsons</h2>
 						<h3 class="heading-tertiary">Studio pour 2 personnes</h3>
 						<p>
-							En rez de chaussée devant la piscine, venez profiter de ce superbe
-							studio sur-équipé avec vue sur les bois de chênes côté fenêtre et sur
-							terrasse privative côté baie vitrée
+							En rez de chaussée devant la piscine, venez profiter de ce superbe studio sur-équipé avec vue sur les bois de chênes côté fenêtre et
+							sur terrasse privative côté baie vitrée
 						</p>
-						<a href="./pages/pinson.html" class="btn btn--primary"
-							>Réserver maintenant</a
-						>
+						<a href="./pages/pinson.html" class="btn btn--primary">Réserver maintenant</a>
 					</div>
 				</div>
 
 				<div class="accommodation accommodation--2">
 					<figure class="accommodation__images">
-						<img
-							src="/assets/Mesanges_02.webp"
-							alt="Gite les pinsons"
-							class="accommodation__images--1"
-						/>
-						<img
-							src="/assets/pinson_1.webp"
-							alt="Gite les mésange"
-							class="accommodation__images--2 accommodation__images--2--left"
-						/>
+						<img data-src="/img/Mesanges_02.webp" alt="Gite les pinsons" class="accommodation__images--1" />
+						<img data-src="/img/pinson_1.webp" alt="Gite les mésange" class="accommodation__images--2 accommodation__images--2--left" />
 					</figure>
 					<div class="accommodation__details">
-						<h2 class="heading-secondary accommodation__details__heading--mesanges">
-							Nids des mésanges
-						</h2>
+						<h2 class="heading-secondary accommodation__details__heading--mesanges">Nids des mésanges</h2>
 						<h3 class="heading-tertiary u-align-left">Studio pour 2 personnes</h3>
 						<p class="u-align-left">
-							En rez de chaussée devant la piscine, venez profiter de ce superbe
-							studio sur-équipé avec vue sur les bois de chênes côté fenêtre et sur
-							terrasse privative côté baie vitrée
+							En rez de chaussée devant la piscine, venez profiter de ce superbe studio sur-équipé avec vue sur les bois de chênes côté fenêtre et
+							sur terrasse privative côté baie vitrée
 						</p>
 						<a href="#" class="btn btn--primary">Réserver maintenant</a>
 					</div>
@@ -105,21 +69,13 @@
 				<div class="area_presentation">
 					<div class="area_presentation__content">
 						<h2 class="heading-primary">Présentation du domaine</h2>
-						<img
-							src="/assets/Mesange_oiseau_2.webp"
-							alt="une mésange"
-							class="area_presentation__image"
-						/>
+						<img data-src="/img/Mesange_oiseau_2.webp" alt="une mésange" class="area_presentation__image" />
 						<p class="area_presentation__text">
-							La nature. Le ciel bleu. Les rochers. Les oiseaux et leurs chants, les
-							arbres et leur silence. Du calme à perte de vue ou des activités à n'en
-							plus finir. Amoureux de la Terre, d'action, de contemplation ou amoureux
-							tout court, soyez les bienvenues sur le domaine CHANTE-CÉVENNES. Nous
-							vous accueillons à partir de 2 nuitées, en week-end ou en Semaine, toute
-							l'année. Chez nous, les appartements s'appellent des "Nids". Nids
-							d'oiseaux, nids douillets, nids d'amour. Pour l'instant, 2 nids sont à
-							disposition, deux studios sur-équipés. D'autres viendront
-							progressivement...
+							La nature. Le ciel bleu. Les rochers. Les oiseaux et leurs chants, les arbres et leur silence. Du calme à perte de vue ou des
+							activités à n'en plus finir. Amoureux de la Terre, d'action, de contemplation ou amoureux tout court, soyez les bienvenues sur le
+							domaine CHANTE-CÉVENNES. Nous vous accueillons à partir de 2 nuitées, en week-end ou en Semaine, toute l'année. Chez nous, les
+							appartements s'appellent des "Nids". Nids d'oiseaux, nids douillets, nids d'amour. Pour l'instant, 2 nids sont à disposition, deux
+							studios sur-équipés. D'autres viendront progressivement...
 						</p>
 					</div>
 				</div>
@@ -132,114 +88,80 @@
 
 				<div class="services-list">
 					<div class="service">
-						<img
-							src="/assets/icons/pool.svg"
-							alt="piscine exterieur"
-							class="service__icon"
-						/>
+						<img data-src="/img/icons/pool.svg" alt="piscine exterieur" class="service__icon" />
 						<h3 class="heading-secondary">piscine exterieur</h3>
-						<p class="service__text">
-							Accessible pour les résidents du gîte d'avril à octobre et pour
-							christine toute l’année
-						</p>
+						<p class="service__text">Accessible pour les résidents du gîte d'avril à octobre et pour christine toute l’année</p>
 					</div>
 					<div class="service">
-						<img
-							src="/assets/icons/terrace.svg"
-							alt="terrasse privative"
-							class="service__icon"
-						/>
+						<img data-src="/img/icons/terrace.svg" alt="terrasse privative" class="service__icon" />
 						<h3 class="heading-secondary">terrasse privative</h3>
-						<p class="service__text">
-							Terrasse assez privé pour qu’une personnne d’1m90 ne puisse pas regarder
-							par dessus
-						</p>
+						<p class="service__text">Terrasse assez privé pour qu’une personnne d’1m90 ne puisse pas regarder par dessus</p>
 					</div>
 					<div class="service">
-						<img
-							src="/assets/icons/clim.svg"
-							alt="climatisation"
-							class="service__icon"
-						/>
+						<img data-src="/img/icons/clim.svg" alt="climatisation" class="service__icon" />
 						<h3 class="heading-secondary">climatisation</h3>
-						<p class="service__text">
-							Pour que les mélodie n’ai pas froid l’hiver, l’été le printemps l’autumn
-							et autres nouvelles saisons
-						</p>
+						<p class="service__text">Pour que les mélodie n’ai pas froid l’hiver, l’été le printemps l’autumn et autres nouvelles saisons</p>
 					</div>
 					<div class="service">
-						<img src="/assets/icons/wifi.svg" alt="wi-fi" class="service__icon" />
+						<img data-src="/img/icons/wifi.svg" alt="wi-fi" class="service__icon" />
 						<h3 class="heading-secondary">wi-fi</h3>
-						<p class="service__text">
-							Wifi avec débit de fibre optique mais potentielement un VPN ça dépend du
-							Manu
-						</p>
+						<p class="service__text">Wifi avec débit de fibre optique mais potentielement un VPN ça dépend du Manu</p>
 					</div>
 					<div class="service">
-						<img
-							src="/assets/icons/map.svg"
-							alt="conseils et suggestions"
-							class="service__icon"
-						/>
+						<img data-src="/img/icons/map.svg" alt="conseils et suggestions" class="service__icon" />
 						<h3 class="heading-secondary">conseils et suggestions</h3>
-						<p class="service__text">
-							Conseils sur les sorties aux alentours mais pas en ville parce que la
-							ville c’est pas bien
-						</p>
+						<p class="service__text">Conseils sur les sorties aux alentours mais pas en ville parce que la ville c’est pas bien</p>
 					</div>
 					<div class="service">
-						<img src="/assets/icons/moto.svg" alt="moto" class="service__icon" />
+						<img data-src="/img/icons/moto.svg" alt="moto" class="service__icon" />
 						<h3 class="heading-secondary">garage moto</h3>
-						<p class="service__text">
-							Garage moto pour les motards qui n’ont pas de harley davinson (c’est
-							juste que ça rentre pas)
-						</p>
+						<p class="service__text">Garage moto pour les motards qui n’ont pas de harley davinson (c’est juste que ça rentre pas)</p>
 					</div>
 				</div>
 			</section>
 
 			<section class="gallery">
 				<figure class="gallery__item gallery__item--1">
-					<img src="assets/piscine_1.webp" alt="Gallery 1" class="gallery__img" />
+					<img data-src="/img/piscine_1.webp" alt="Gallery 1" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--2">
-					<img src="assets/Accueil_1.webp" alt="Gallery 13" class="gallery__img" />
+					<img data-src="/img/Accueil_1.webp" alt="Gallery 13" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--3">
-					<img src="assets/ext_6.webp" alt="Gallery 3" class="gallery__img" />
+					<img data-src="/img/ext_6.webp" alt="Gallery 3" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--4">
-					<img src="assets/repas_1.webp" alt="Gallery 4" class="gallery__img" />
+					<img data-src="/img/repas_1.webp" alt="Gallery 4" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--5">
-					<img src="assets/ext_4.webp" alt="Gallery 5" class="gallery__img" />
+					<img data-src="/img/ext_4.webp" alt="Gallery 5" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--6">
-					<img src="assets/piscine_2.webp" alt="Gallery 6" class="gallery__img" />
+					<img data-src="/img/piscine_2.webp" alt="Gallery 6" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--7">
-					<img src="assets/ext_2.webp" alt="Gallery 7" class="gallery__img" />
+					<img data-src="/img/ext_2.webp" alt="Gallery 7" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--8">
-					<img src="assets/gite1.webp" alt="Gallery 8" class="gallery__img" />
+					<img data-src="/img/gite1.webp" alt="Gallery 8" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--9">
-					<img src="assets/ext_1.webp" alt="Gallery 9" class="gallery__img" />
+					<img data-src="/img/ext_1.webp" alt="Gallery 9" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--10">
-					<img src="assets/pinson_4.webp" alt="Gallery 10" class="gallery__img" />
+					<img data-src="/img/pinson_4.webp" alt="Gallery 10" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--11">
-					<img src="assets/picSaintLoup.jpg" alt="Gallery 11" class="gallery__img" />
+					<img data-src="/img/picSaintLoup.jpg" alt="Gallery 11" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--12">
-					<img src="assets/entrée_domaine_1.webp" alt="Gallery 12" class="gallery__img" />
+					<img data-src="/img/entrée_domaine_1.webp" alt="Gallery 12" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--13">
-					<img src="assets/ext_5.webp" alt="Gallery 2" class="gallery__img" />
+					<img data-src="/img/ext_5.webp" alt="Gallery 2" class="gallery__img" />
 				</figure>
 				<figure class="gallery__item gallery__item--14">
-					<img src="assets/piscine_3.webp" alt="Gallery 14" class="gallery__img" />
+					<img data-src="/img/piscine_3.webp" alt="Gallery 14" class="gallery__img" />
 				</figure>
 			</section>
 		</main>
