--- a/pages/pinson.html
+++ b/pages/pinson.html
@@ -4,20 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<link
-			href="https://fonts.googleapis.com/css?family=Poppins:100,300,400,700,900"
-			rel="stylesheet"
-		/>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap"
-			rel="stylesheet"
-		/>
+		<link href="https://fonts.googleapis.com/css?family=Poppins:100,300,400,700,900" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
 			rel="stylesheet"
 		/>
 
-		<link rel="shortcut icon" type="image/png" href="assets/dove-solid.svg" />
+		<link rel="shortcut icon" type="image/png" href="/img/dove-solid.svg" />
 
 		<script type="module" src="../main.ts"></script>
 
